--- a/asset/styles/layouts/_main.scss
+++ b/asset/styles/layouts/_main.scss
@@ -4,6 +4,7 @@ main {
         display: grid;
         grid-template-columns: 50% 50%;
 
+
         @media screen and (max-width:750px) {
             display: block;
         }
@@ -105,6 +106,10 @@ main {
     }
 
     .section2 {
+
+        #menu {
+            padding-top: 1px;
+        }
 
         position: relative;
 
@@ -408,6 +413,10 @@ main {
                             font-size: 1.4em;
                         }
 
+                        @media screen and (max-width:460px) {
+                            font-size: 1.1em;
+                        }
+
 
                     }
                 }
@@ -426,6 +435,10 @@ main {
 
                     @media screen and (max-width: 1000px) {
                         font-size: 1em;
+                    }
+
+                    @media screen and (max-width: 460px) {
+                        font-size: 0.8em;
                     }
                 }
             }
@@ -446,6 +459,10 @@ main {
 
                 @media screen and (max-width:1000px) {
                     font-size: 1.5em;
+                }
+
+                @media screen and (max-width:460px) {
+                    font-size: 1.2em;
                 }
             }
         }
@@ -612,7 +629,13 @@ main {
                     }
 
                     @media screen and (max-width:600px) {
-                        margin: 50px auto 50px;
+                        padding: 20px 0;
+                        width: 100%;
+                    }
+
+                    @media screen and (max-width:400px) {
+                        font-size: 0.9em;
+                        font-weight: 600;
                     }
 
                 }
@@ -845,6 +868,7 @@ main {
 
     .section5 {
         position: relative;
+
 
         .section5-container {
             margin: 250px auto;
